# OpenColorIO_Tools

./: .gitignore  README.md
ocio_functionality/source/: ocio_functionality.cpp  ocio_functionality.h
ocio_houdini/: CMakeLists.txt
ocio_houdini/script/: ocio_houdini_hcustom_compile_settings.txt  ocio_nodes.shelf
ocio_houdini/source/: ocio_cdl_transform.cpp  ocio_cdl_transform.h  ocio_colorspace.cpp  ocio_colorspace.h  ocio_file_transform.cpp  ocio_file_transform.h  ocio_log_convert.cpp  ocio_log_convert.h  ocio_plugin.cpp  ocio_types.cpp  ocio_types.h
ocio_maya/: CMakeLists.txt
ocio_maya/script/: AEOCIOCDLTransformTemplate.mel  AEOCIOColorSpaceTemplate.mel  AEOCIOFileTransformTemplate.mel  AEOCIOLogConvertTemplate.mel  update_plugin_OCIOCDLTransform.py  update_plugin_OCIOColorSpace.py  update_plugin_OCIOColorspace.py  update_plugin_OCIOFileTransform.py  update_plugin_OCIOLogConvert.py  update_plugin_ocio_simple_transform.py  update_plugin_ocio_test.py
ocio_maya/source/: ocio_cdl_transform.cpp  ocio_cdl_transform.h  ocio_colorspace.cpp  ocio_colorspace.h  ocio_export_cc.cpp  ocio_export_cc.h  ocio_file_transform.cpp  ocio_file_transform.h  ocio_log_convert.cpp  ocio_log_convert.h  ocio_plugin.cpp  ocio_simple_transform.cpp  ocio_simple_transform.h  ocio_test.cpp  ocio_test.h
ocio_view/: CMakeLists.txt
ocio_view/media/: inspect_view.ui  ocio_view.ui
ocio_view/source/: image_label.cpp  image_label.h  inspect_view.cpp  inspect_view.h  main.cpp  ocio_view.cpp  ocio_view.h
